| Summary: | ASTERISK-29737: chan_iax2: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-13 06:04:00.000-0600 | Date Closed: | 2021-11-18 11:55:38.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_iax2 |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following warnings appear in the file {{doxygen.log}}:
{code} channels/chan_iax2.c:26: warning: unable to resolve reference to 'Config_iax' for \ref command channels/chan_iax2.c:5033: warning: Found unknown command '@context' channels/chan_iax2.c:5036: warning: documented empty return type of parse_dial_string channels/iax2/include/iax2.h:16: warning: explicit link request to 'c' could not be resolved channels/iax2/include/iax2.h:17: warning: unable to resolve reference to 'iax2-parser.h' for \ref command {code} The last two message are repeated five times. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-13 06:04:01.321-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 11:55:39.201-0600 Change 17359 merged by Friendly Automation: chan_iax2: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17359|https://gerrit.asterisk.org/c/asterisk/+/17359] By: Friendly Automation (friendly-automation) 2021-11-18 12:04:53.198-0600 Change 17358 merged by Friendly Automation: chan_iax2: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17358|https://gerrit.asterisk.org/c/asterisk/+/17358] By: Friendly Automation (friendly-automation) 2021-11-18 12:48:40.355-0600 Change 17380 merged by George Joseph: chan_iax2: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17380|https://gerrit.asterisk.org/c/asterisk/+/17380] By: Friendly Automation (friendly-automation) 2021-11-18 12:48:53.285-0600 Change 17361 merged by George Joseph: chan_iax2: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17361|https://gerrit.asterisk.org/c/asterisk/+/17361] | ||