chan_iax2: Fix for Doxygen.

ASTERISK-29737

Change-Id: I282003cc553989fd5c19ceeac9e478fa4ee06cec